# backbase

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
backbase/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
main/: __init__.py  admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py
main/providers/: currency_beacon.py  mock_provider.py  provider_manager.py
main/static/css/: styles.css
main/templates/admin/: converter.html
main/templates/admin/currencyexchangerate/: change_list.html
static/css/: styles.css
